<resources>
    <string name="app_name" translatable="false">Backlog Widget for GitHub</string>

    <!-- description of the widget -->
    <string name="app_widget_description">Showcasing a project\'s item list with a quick-add button for new entries."</string>
    <string name="app_widget_text_loading">Loading…</string>

    <!-- title of the settings when add new project -->
    <string name="title_activity_settings">%s Settings</string>

    <!-- Preference Titles -->
    <string name="about_header">About</string>

    <!-- Token Preferences -->
    <string name="token_title">GitHub Account settings</string>
    <string name="token_title_github_username">User Name</string>
    <string name="token_title_github_token">Personal Access Token</string>
    <string name="link_to_create_token_description_github">If you don\'t have it, create a personal access token from here.</string>
    <string name="link_to_create_token_title_github">Link to GitHub settings</string>

    <!-- Messages Preferences -->
    <string name="project_title">Choose Project</string>
    <string name="project_default_value_syncing">Syncing…</string>
    <string name="project_default_value_not_selected">Not selected</string>

    <!-- About Preferences -->
    <string name="about_how_to_use_app">How to use</string>
    <string name="about_how_to_use_app_description">1. Enter your GitHub username.\n2. Generate a personal access token from GitHub or use \"%s\".\n3. Enter the personal access token.\n4. Select a project by tapping \"%s\".</string>
    <string name="backlog_widget_btn_add_text">Add</string>
    <string name="dialog_add_item_edit_text">Write your idea here…</string>
    <string name="error_it_should_be_replaced">IT SHOULD BE REPLACED</string>
    <string name="backlog_widget_btnAddItem_desc">Add entry</string>
    <string name="backlogWidget_emptyView_text">No items to display</string>
    <string name="dialogAdditem_btnSubmit_desc">Submit</string>
    <string name="dialogAddItem_tvDescription_text">Description</string>
    <string name="dialogAddItem_projectItemTitle_text">Project Name</string>
    <string name="preference_key_github_username" translatable="false">github_username</string>
    <string name="preference_key_github_pat" translatable="false">personal_access_token</string>
    <string name="preference_key_github_project" translatable="false">project</string>
    <string name="preference_key_filter_status" translatable="false">filter_status</string>
    <string name="preference_title_filter_status">Filter by status</string>

    <string name="title_open_source_licenses">Open Source Licenses</string>

    <!-- Creating a new project   -->
    <string name="toast_project_created">Project created. Please reopen widget this settings to load.</string>
</resources>