<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/token_title">

        <EditTextPreference
            app:key="personal_access_token"
            app:title="@string/token_title_github"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="webpage_create_token"
            app:summary="@string/link_to_create_token_description_github"
            app:title="@string/link_to_create_token_title_github">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/settings/tokens/new?description=GitHub%20GraphQL%20API%20Token&amp;scopes=user,repo,admin:org,project,project:read" />
        </Preference>

        <ListPreference
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="project"
            app:title="@string/project_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header">
        <Preference
            app:key="preference_about_how_to_use"
            app:summary="@string/about_how_to_use_app_description"
            app:title="@string/about_how_to_use_app" />
    </PreferenceCategory>

</PreferenceScreen>
